fixing dashboard resize issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -88,27 +88,43 @@
     .dashboard .instr{
         width: 20%;
         z-index: 1;
-        height: 97%;
+        height: 100%;
         float: right;
         background-color: rgba(194, 189, 189, 0.932);
         border-radius: 5px 5px 5px 5px;
         font-size: 0.85rem;
+        word-wrap: break-word;
+        overflow-y: scroll;
+    }
+    .dashboard .instr h4{
+        margin-left: 5px;
+        margin-right: 2px;
+
     }
 
-    .dashboard .instr h4, p{
-        margin-left: 5px;
+    .dashboard .instr ol,ul,li{
+        margin-right: 2px;
+    }
+
+    .dashboard .tableau{
+        position: absolute;
+        width: 80%;
+        height: 100%;
     }
 
     .about{
         box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.267);
         border-radius: 7px;
         margin:auto;
+        margin-top: 15px;
         width: 99%;
         margin-left: 10px;
-        height: 300px;
+        height: 400px;
         font-family: Garamond;
         font-size: 1.25rem;
         padding-bottom: 10px;
+        word-wrap: break-word;
+        overflow-y: scroll;
     }
 
     .about h3,p{
